--- a/package.json
+++ b/package.json
@@ -12,16 +12,34 @@
   "dependencies": {
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.29.0",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.2",
+    "stylelint-config-recommended": "^7.0.0",
     "typescript": "4.6.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/knteuk/nextjs-practice.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/knteuk/nextjs-practice/issues"
+  },
+  "homepage": "https://github.com/knteuk/nextjs-practice#readme"
 }
